--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "lucide-react": "^0.424.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "react-share": "^5.1.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
